# alfred-currency-converter

./: .gitignore  README.md  coins.txt  info.plist  main.py  pyproject.toml  release.sh  requirements.txt
providers/: __init__.py  crypto.py  fiat.py
scripts/: release.sh
src/: environment.py  main.py  util.py
src/api/: __init__.py  ars.py  crypto.py  fiat.py
src/providers/: crypto.py
tests/: test_main.py  test_workflow.py
workflow/: __init__.py  background.py  notify.py  update.py  util.py  workflow.py
