[tool.poetry]
name = "Currency Converter"
version = "2.7.4"
description = "Convert between multiple fiat and crypto currencies"
documentation = "https://github.com/fedecalendino/alfred-currency-converter/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-currency-converter"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "0.3.3"
requests = "^2.28.1"
pycoingecko = "^3.1.0"
ccy = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
