[tool.poetry]
name = "Currency Converter"
version = "2.7.5"
description = "Convert between multiple fiat and crypto currencies"
documentation = "https://github.com/fedecalendino/alfred-currency-converter/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-currency-converter"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
alfred-pyflow = "^0.4.5"
ccy = "^1.3.0"
pycoingecko = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
ddt = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
